<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestOlx</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_help">Ad Title (min. 15 chars)</string>
    <string name="description_help">Ad Title (min. 15 chars)</string>
    <string name="choose_category_help">Ad Title (min. 15 chars)</string>
    <string name="location_help">Location</string>
    <string name="name_help">Name</string>
    <string name="email_help">Email Address</string>
    <string name="phone_number_help">Phone Number</string>
    <string name="locality_help">Locality (optional)</string>
    <string name="button_submit_text">Submit</string>

</resources>